# rslack

./: .dockerignore  .gitignore  .token.keep  .token.yours  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: dependabot.yml  release-please-config.json
.github/workflows/: cd.yml  ci.yml  github-release-binary.yaml  pr.yml  release-and-cargo-publish.yml  release.yml  rust.yml
src/: lib.rs
src/api/: mod.rs
src/config/: mod.rs
src/console/: channel_selector.rs  editor.rs  message_viewer.rs  mod.rs  table.rs
src/option/: mod.rs
src/slack/: mod.rs
src/terminal/: mod.rs
src/util/: mod.rs
tests/: token.test.invalid  token.test.valid
tests/fixtures/config/: config.test.valid
tests/fixtures/slack/conversations_history/: ok.json
tests/fixtures/slack/conversations_list/: ok.json
