[package]
name = "rslack"
version = "0.5.2"
authors = ["kohbis <dev.kohbis@gmail.com>"]
edition = "2021"
description = "cli for posting slack message"
readme = "README.md"
license = "MIT"
repository = "https://github.com/kohbis/rslack"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
dirs = "6.0"
libc = "0.2"
reqwest = { version = "0.12.28", features = ["json"] }
rpos = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
structopt = "0.3.20"
termion = "4.0.6"
tokio = { version = "1.48.0", features = ["full"] }
unicode-width = "0.2.2"
url = "2.5.7"

[dev-dependencies]
mockito = "1.7.1"
serial_test = "3.2.0"
