[package]
name = "rslack"
version = "0.5.7"
authors = ["kohbis <dev.kohbis@gmail.com>"]
edition = "2021"
description = "cli for posting slack message"
readme = "README.md"
license = "MIT"
repository = "https://github.com/kohbis/rslack"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
chrono = "0.4"
dirs = "6.0"
libc = "0.2"
reqwest = { version = "0.13.2", features = ["json", "form"] }
rpos = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.5.58", features = ["derive"] }
termion = "4.0.6"
tokio = { version = "1.49.0", features = ["full"] }
unicode-width = "0.2.2"
url = "2.5.8"

[dev-dependencies]
mockito = "1.7.2"
serial_test = "3.3.1"
